--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -17,18 +17,11 @@ jobs:
           submodules: true  # Fetch Hugo themes (true OR recursive)
           fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
 
-      - name: Checkout submodules
-        run: git submodule update --init --recursive
-      - name: test 
-        run: git submodule
-      - name: debug themes
-        run: ls themes
-
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: '0.119.0'
-          extended: true
+          # extended: true
 
       - name: Build
         run: hugo --minify
