--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hugo-theme-relearn"]
-	path = themes/hugo-theme-relearn
-	url = https://github.com/McShelby/hugo-theme-relearn.git
+[submodule "themes/terminalcv"]
+	path = themes/terminalcv
+	url = https://github.com/4s3ti/terminalcv.git
