--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,7 +24,9 @@ jobs:
       - name: Setup Hugo
         run: |
           curl -L -o /tmp/hugo.tar.gz 'https://github.com/gohugoio/hugo/releases/download/v0.120.4/hugo_extended_0.120.4_linux-amd64.tar.gz'
-          tar -C ${RUNNER_TEMP} -zxvf /tmp/hugo.tar.gz hugo          
+          tar -C ${RUNNER_TEMP} -zxvf /tmp/hugo.tar.gz hugo
+
+      - run: ls       
       - name: Build
         run: ${RUNNER_TEMP}/hugo
 
