--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -29,7 +29,7 @@ jobs:
       - run: git submodule add https://github.com/4s3ti/terminalcv.git themes/terminalcv
       
       - run: pwd
-      - run: ls themes
+      - run: ls themes/terminalcv
 
 
       - name: Build
