--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,6 +30,7 @@ jobs:
       
       - run: pwd
       - run: ls themes/terminalcv
+      - run: mv themes/terminalcv themes/terminalCV
 
 
       - name: Build
